--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -2,16 +2,41 @@
 
 <body>
     {% include 'recipes/parcials/header.html' %}
-    <div class="search-container">
-        <div class="container">
-            <form action="" class="search-form">
-                <input type="search" class="search-input" name="search">
-                <button type="submit" class="search-button"><i class="fas fa-search"></i></button>
-            </form>
-        </div>
-    </div>
+    {% include 'recipes/parcials/search.html' %}
 
-    </div>
+    <main class="main-content-container">
+        <div class="main-content main-content-list container">
+            <div class="recipe recipe-list-item">
+                <div class="recipe-cover">
+                    <img src="https://placehold.co/1280x820/orange/white.png" alt="Temporário">
+                </div>
+                <div class="recipe-title-container">
+                    <h2 class="recipe-title">Lorem ipsum dolor sit amet.</h2>
+                </div>
+
+                <div class="recipe-author">
+                    <span class="recipe-author-item">
+                        <i class="fas fa-user"></i>
+                            Eric Cabral
+                    </span>
+                    <span class="recipe-author-item">
+                        <i class="fas fa-calendar-alt"></i>
+                        16/10/2021 às 11:21
+                    </span>
+                    <span class="recipe-author-item">
+                        <a href="recipes/category/cafe-da-manha/">
+                            <i class="fas fa-layer-group"></i>
+                            <span>Café da Manhã</span>
+                        </a>
+                    </span>
+                </div>
+
+                <div class="recipe-content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, suscipit totam vero aliquam ipsam nihil consequatur debitis optio fugiat eaque obcaecati, facere ad repudiandae beatae libero! Facere quibusdam neque consequuntur!</p>
+                </div>
+            </div>
+        </div>    
+    </main>
 </body>
 
 </html>
