--- a/recipes/templates/recipes/parcials/head.html
+++ b/recipes/templates/recipes/parcials/head.html
@@ -74,7 +74,7 @@
         }
 
         body {
-            font-size: 2.4rem;
+            font-size: 1.6rem;
             font-family: var(--font-primary);
             background: var(--color-gray-1);
             color: var(--color-dark-text);
@@ -172,6 +172,8 @@
             box-shadow: -5px 5px 10px rgba(0, 0, 0, .2);
             transform: scale(1);
             transition: all 300ms ease-in-out;
+            border-radius: .6rem;
+            overflow: hidden;
         }
 
         .recipe img {
@@ -206,7 +208,7 @@
             margin-right: 1rem;
         }
 
-        .recipe-author a{
+        .recipe-author a {
             color: var(--color-primary);
             transition: all 300 ms ease-in-out;
             text-decoration: none;
@@ -214,6 +216,39 @@
 
         .recipe-author a:hover {
             color: var(--color-primary-dark);
+        }
+
+        .recipe-meta-container {
+            display: flex;
+            flex-flow: row wrap;
+            padding: var(--spacing-gutter-medium);
+            background: var(--color-gray-1);
+        }
+
+        .recipe-meta {
+            display: flex;
+            flex-flow: column nowrap;
+            flex-shrink: 1;
+            flex-grow: 1;
+            text-align: center;
+        }
+
+        .recipe-meta-text {
+            font-size: 1.6rem
+        }
+
+        .recipe-footer a {
+            background: var(--color-primary-dark);
+            display: block;
+            color: var(--color-white);
+            text-decoration: none;
+            text-align: center;
+            padding: 1.5rem var(--spacing-gutter-medium);
+            transition: all 300ms ease-in-out;
+        }
+
+        .recipe-footer a:hover {
+            filter: brightness(2)
         }
     </style>
 </head>
