herança em templates e template blocks

--- a/recipes/templates/recipes/pages/recipe-view.html
+++ b/recipes/templates/recipes/pages/recipe-view.html
@@ -1,17 +1,7 @@
-{% include 'recipes/parcials/head.html' %}
+{% extends 'global/base.html' %}
 
-<body>
-    {% include 'recipes/parcials/header.html' %}
-    {% include 'recipes/parcials/search.html' %}
-
-    <main class="main-content-container">
-        <div class="main-content main-content-detail container">
-            {% include 'recipes/parcials/recipe.html' %}
-        </div>    
-    </main>
-
-    {% include 'recipes/parcials/footer.html' %}
-
-</body>
-
-</html>
+{% block content %}
+<div class="main-content main-content-detail container">
+    {% include 'recipes/parcials/recipe.html' %}
+</div>
+{% endblock content %}
