--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -4,11 +4,8 @@
 
 {% block content %}
 <div class="main-content main-content-list container">
-    {% include 'recipes/parcials/recipe.html' %}
-    {% include 'recipes/parcials/recipe.html' %}
-    {% include 'recipes/parcials/recipe.html' %}
-    {% include 'recipes/parcials/recipe.html' %}
-    {% include 'recipes/parcials/recipe.html' %}
-    {% include 'recipes/parcials/recipe.html' %}
+    {% for recipe in recipes %}
+        {% include 'recipes/parcials/recipe.html' %}
+    {% endfor %}
 </div>
 {% endblock content %}
