--- a/recipes/templates/recipes/parcials/recipe.html
+++ b/recipes/templates/recipes/parcials/recipe.html
@@ -1,6 +1,6 @@
 <div class="recipe recipe-list-item">
     <div class="recipe-cover">
-        <img src="https://placehold.co/1280x820/orange/white.png" alt="Temporário">
+        <img src={{ recipe.cover.url }} alt="Temporário">
     </div>
     <div class="recipe-title-container">
         <h2 class="recipe-title">{{ recipe.title }}</h2>
@@ -42,11 +42,19 @@
         </div>
     </div>
 
+    {% if is_detail_page is not True %}
     <footer class="recipe-footer">
-        <a class="recipe-read-more button button-dark button-full-width" href="recipes/">
+        <a class="recipe-read-more button button-dark button-full-width" href="recipes/1/">
             <i class="fas fa-eye"></i>
-            <span>ver mais...</span>
+            <span>Ver Mais...</span>
         </a>
     </footer>
+    {% endif %}
+
+    {% if  is_detail_page is True%}
+        <div class="preparation-steps">
+            {{ recipe.preparation_steps|linebreaksbr }}
+        </div>
+    {% endif %}
 
 </div>
