--- a/recipes/templates/recipes/parcials/recipe.html
+++ b/recipes/templates/recipes/parcials/recipe.html
@@ -2,7 +2,7 @@
     {% if recipe.cover %}
     <div class="recipe-cover">
         <a href="{% url 'recipes:recipe' recipe.id %}">
-            <img src={{ recipe.cover.url }} alt="Temporário">
+            <img src="{{ recipe.cover.url }}" alt="Temporário">
         </a>
     </div>
     {% endif %}
@@ -74,7 +74,11 @@
 
     {% if  is_detail_page is True%}
         <div class="preparation-steps">
-            {{ recipe.preparation_steps|linebreaksbr }}
+            {% if recipe.preparation_steps_is_html is True %}
+                {{ recipe.preparation_steps|safe }}
+            {% else %}
+                {{ recipe.preparation_steps|linebreaksbr }}
+            {% endif %}
         </div>
     {% endif %}
 
